// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Accordion actions Add Accordion 1`] = `
Object {
  "payload": Object {
    "accordionId": "accordion-id",
  },
  "type": "@@MT/COMMON/ADD_ACCORDION",
}
`;

exports[`Accordion actions Remove Accordion 1`] = `
Object {
  "payload": Object {
    "accordionId": "accordion-id",
  },
  "type": "@@MT/COMMON/REMOVE_ACCORDION",
}
`;

exports[`Accordion actions Remove Accordion 2`] = `
Object {
  "payload": Object {
    "accordionId": "accordion-id",
  },
  "type": "@@MT/COMMON/TOGGLE_ACCORDION",
}
`;
